test_regress/t/t_tagged_if_member_notfound_bad.out
%Error: t/t_tagged_if_member_notfound_bad.v:21:19: Tagged union member 'BadMember' not found in 'union tagged{}t.VInt'
                                                 : ... note: In instance 't'
   21 |     if (v matches tagged BadMember .x) begin
      |                   ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
